--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -7,6 +7,11 @@
   border-radius: 4px;
   padding: 25px 30px 30px;
 
+  @media (max-width: 380px) {
+    width: 100%;
+    padding: 25px 0 30px;
+  }
+
   &__header {
     & h1 {
       font-weight: 700;
