--- a/src/pages/roomDetails/roomDetails.pug
+++ b/src/pages/roomDetails/roomDetails.pug
@@ -9,12 +9,12 @@ block content
   section.roomDetails
     .roomDetails__imgBlock 
       .roomDetails__leftImgBlock 
-        img(src=require("../../images/room1.png"))
+        img.roomDetails__leftImg(src=require("../../images/room1.png"))
       .roomDetails__rightImgBlock 
         .roomDetails__topImg 
-          img(src=require("../../images/room2.png"))
+          img.roomDetails__firstRightImage(src=require("../../images/room2.png"))
         .roomDetails__botImg 
-          img(src=require("../../images/room3.png"))
+          img.roomDetails__secondRightImage(src=require("../../images/room3.png"))
     .roomDetails__mainContent 
       .roomDetails__leftContentBlock
         .roomDetails__topContent 
