--- a/src/components/findRooms/findRooms.scss
+++ b/src/components/findRooms/findRooms.scss
@@ -7,6 +7,15 @@
   box-shadow: 0 0 25px rgb(0 0 0 / 20%);
   border-radius: 4px;
 
+  @media (max-width: 380px) {
+    width: 100%;
+    padding: 24px 10px 30px;
+  }
+  @media (max-width: 340px) {
+    width: 100%;
+    padding: 24px 0px 30px;
+  }
+
   &__header {
     & h1 {
       font-weight: 700;
