--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -9,6 +9,13 @@
     width: 100%;
     height: 442px;
     background-color: #fff;
+    @media (max-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-top: 16px;
+    }
   }
 
   & span.icon {
@@ -31,6 +38,9 @@
     @media (max-width: 910px) {
       flex-wrap: wrap;
       justify-content: center;
+    }
+    @media (max-width: 768px) {
+      display: none;
     }
   }
 
@@ -90,15 +100,33 @@
     margin-bottom: 4px;
   }
 
+  &__middleBlock {
+    display: none;
+    @media (max-width: 768px) {
+      display: block;
+    }
+  }
+
   &__botBlock {
     display: flex;
     justify-content: space-between;
     padding: 23px 140px 26px;
     border-top: 1px solid $dark5;
     height: 70px;
+    @media (max-width: 768px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      height: auto;
+      padding: 23px 0 26px;
+    }
   }
 
   &__copyright {
+    @media (max-width: 768px) {
+      margin-bottom: 22px;
+    }
   }
 
   &__socialButtons {
