--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -9,13 +9,16 @@
   border-radius: 4px;
   padding: 23px 30px 30px;
 
-  @media (max-width: 380px) {
+  @media (max-width: 400px) {
     width: 100%;
     padding: 23px 10px 30px;
+    border: none;
   }
 
-  @media (max-width: 330px) {
+  @media (max-width: 340px) {
+    width: 100%;
     padding: 23px 0px 30px;
+    border: none;
   }
 
   &__header {
