--- a/src/pages/loginPage/loginPage.scss
+++ b/src/pages/loginPage/loginPage.scss
@@ -5,14 +5,15 @@
   background-repeat: no-repeat;
   background-position: 0% 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
   @media (max-width: 1380px) {
     width: 100%;
   }
 
   &__loginForm {
-    // margin-top: 163px;
-    margin-left: -94px;
+    margin-left: 530px;
+    @media (max-width: 1380px) {
+      margin: 0 auto;
+    }
   }
 }
