--- a/src/pages/searchRoom/searchRoom.pug
+++ b/src/pages/searchRoom/searchRoom.pug
@@ -10,6 +10,27 @@ include ../../components/room/room.pug
 
 block content
   section.searchRoom
+    .searchRoom__button
+      +button({title: 'Открыть фильтр', type: 'big', arrow: false})
+    .searchRoom__dropdown-filter.js-searchRoom__dropdown-filter
+      .searchRoom__filter-menu 
+        +filterDateDropdown({uniqId: 'searchRoom__filterDateDropdown2', title: 'даты пребывания в отеле'})
+      .searchRoom__filter-menu 
+        +dropdown({uniqId: 'searchRoom__dropdown2', title: 'гости', description: '', small: true, text: 'Сколько гостей'})
+      .searchRoom__filter-menu 
+      .searchRoom__filter-menu 
+        h3 правила дома
+        +checkbox({id: 'checkbox4', title: 'Можно курить'})
+        +checkbox({id: 'checkbox5', title: 'Можно с питомцами'})
+        +checkbox({id: 'checkbox6', title: 'Можно пригласить гостей (до 10 человек)'})
+      .searchRoom__filter-menu 
+        h3 доступность
+        +checkbox({id: 'SuperIDcheckbox43', title: 'Широкий коридор', rich: true, richText: 'Ширина коридоров в номере не менее 91 см.'})
+        +checkbox({id: 'SuperIDcheckbox444', title: 'Помощник для инвалидов', rich: true, richText: 'На 1 этаже вас встретит специалист и проводит до номера.'})
+      .searchRoom__filter-menu 
+        +dropdown({uniqId: 'dropdown3', type: 'furniture', title: 'Удобствa номера', small: true, description: '', text: '2 спальни, 2 кровати...'})
+      .searchRoom__filter-menu 
+        +expandableCheckboxList({id: 'expandableCheckbox2', title: 'дополнительные удобства'})
     .searchRoom__sidebar
       .searchRoom__dateDropdown 
         +filterDateDropdown({uniqId: 'searchRoom__filterDateDropdown1', title: 'даты пребывания в отеле'})
@@ -30,7 +51,7 @@ block content
       .searchRoom__convenienceList
         +expandableCheckboxList({id: 'expandableCheckbox1', title: 'дополнительные удобства'})
     .searchRoom__mainContent
-      h1 Номера, которые мы для вас подобрали
+      h1.searchRoom__header Номера, которые мы для вас подобрали
       .searchRoom__hotelList 
         - const rooms = [{id: 'room1', type: 'люкс', number: '888', price: '9 990', stars: 5, review: 145, array: ['room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room2', number: '840', type: '', price: '9 990', stars: 4, review: 65, array: ['room.png', 'room.png', 'room.png', 'room.png']}, {id: 'room3', type: 'люкс', price: '8 500', number: '980', stars: 3, review: 35, array: ['room3.1.png', 'room3.1.png', 'room3.1.png', 'room3.1.png']}, {id: 'room4', type: 'люкс', price: '7 300', number: '856', stars: 5, review: 145, array: ['room4.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room5', type: '', number: '740', price: '6 000', stars: 4, review: 44, array: ['room5.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room6', type: '', number: '982', price: '5 800', stars: 3, review: 56, array: ['room6.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room7', type: '', number: '678', price: '5 500', stars: 5, review: 45, array: ['room7.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room8', type: '', number: '450', price: '5 300', stars: 4, review: 39, array: ['room8.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room9', type: '', number: '350', price: '5 000', stars: 3, review: 77, array: ['room9.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room10', type: '', price: '5 000', number: '666', stars: 5, review: 25, array: ['room10.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room11', type: '', number: '444', price: '5 000', stars: 3, review: 15, array: ['room11.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}, {id: 'room12', type: '', number: '352', price: '5 000', stars: 3, review: 55, array: ['room12.png', 'room1.1.jpg', 'room1.1.jpg', 'room1.1.jpg']}]
         each room, idx in rooms 
