--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -1,10 +1,9 @@
-@import "../../styles/global";
+@import '../../styles/global';
 
 .comment {
   padding: 10px 0 0 4px;
 
   &__top {
-    height: 48px;
     display: flex;
     flex-direction: row;
     margin-bottom: 8px;
@@ -41,7 +40,6 @@
   }
 
   &__bottom {
-    height: 72px;
     display: flex;
     flex-direction: row;
   }
