--- a/src/components/findRooms/findRooms.scss
+++ b/src/components/findRooms/findRooms.scss
@@ -9,6 +9,10 @@
 
   @media (max-width: 380px) {
     width: 100%;
+    padding: 24px 20px 30px;
+  }
+  @media (max-width: 360px) {
+    width: 100%;
     padding: 24px 10px 30px;
   }
   @media (max-width: 340px) {
