--- a/src/pages/searchRoom/searchRoom.scss
+++ b/src/pages/searchRoom/searchRoom.scss
@@ -32,7 +32,7 @@
   }
 
   &__filter-menu {
-    margin-right: 5px;
+    margin-right: 15px;
   }
 
   &__dropdown-filter--active {
@@ -40,6 +40,9 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    @media (min-width: 900px) {
+      display: none;
+    }
   }
 
   &__dateDropdown {
