Fixed responsive bulletList, chart, footer, landingPage, roomDetails, seatchRoom. Added style to startPage

--- a/src/components/bulletList/bulletList.scss
+++ b/src/components/bulletList/bulletList.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global";
+@import '../../styles/global';
 
 .bulletList {
   &__title {
@@ -34,5 +34,8 @@
     font-size: 14px;
     line-height: 24px;
     color: $dark75;
+    @media (max-width: 380px) {
+      width: 100%;
+    }
   }
 }
