--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -127,6 +127,9 @@
     @media (max-width: 768px) {
       margin-bottom: 22px;
     }
+    @media (max-width: 380px) {
+      text-align: center;
+    }
   }
 
   &__socialButtons {
