--- a/src/pages/searchRoom/searchRoom.pug
+++ b/src/pages/searchRoom/searchRoom.pug
@@ -10,7 +10,7 @@ include ../../components/room/room.pug
 
 block content
   section.searchRoom
-    .searchRoom__button
+    .searchRoom__button.js-searchRoom__button
       +button({title: 'Открыть фильтр', type: 'big', arrow: false})
     .searchRoom__dropdown-filter.js-searchRoom__dropdown-filter
       .searchRoom__filter-menu 
