--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -2,6 +2,13 @@
   display: flex;
   width: 160px;
   height: 160px;
+  @media (max-width: 380px) {
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+  }
 
   &__canvas {
     width: 160px;
@@ -13,6 +20,9 @@
     right: 7px;
     list-style: none;
     margin-top: 47px;
+    @media (max-width: 380px) {
+      margin-top: 0;
+    }
   }
 
   &__item {
