--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,8 +1,8 @@
-@import "../../styles/global";
+@use 'src/styles/global';
 
 .paginationjs {
   line-height: 1.6;
-  font-family: Marmelad, "Lucida Grande", Arial, "Hiragino Sans GB", Georgia, sans-serif;
+  font-family: Marmelad, 'Lucida Grande', Arial, 'Hiragino Sans GB', Georgia, sans-serif;
   font-size: 14px;
   box-sizing: initial;
   display: flex;
@@ -11,7 +11,7 @@
 
 .paginationjs::after {
   display: table;
-  content: " ";
+  content: ' ';
   clear: both;
 }
 
@@ -52,7 +52,7 @@
   background: #fff;
   font-size: 12px;
   font-weight: 400;
-  color: $dark50;
+  color: global.$dark50;
   text-decoration: none;
   text-align: center;
 }
@@ -93,7 +93,7 @@
   border-radius: 0 3px 3px 0;
 }
 
-.paginationjs .paginationjs-go-input > input[type="text"] {
+.paginationjs .paginationjs-go-input > input[type='text'] {
   width: 30px;
   height: 28px;
   background: #fff;
@@ -108,7 +108,7 @@
   box-sizing: initial;
 }
 
-.paginationjs .paginationjs-go-button > input[type="button"] {
+.paginationjs .paginationjs-go-button > input[type='button'] {
   min-width: 40px;
   height: 30px;
   line-height: 28px;
@@ -126,7 +126,7 @@
   vertical-align: middle\9;
 }
 
-.paginationjs.paginationjs-theme-blue .paginationjs-go-input > input[type="text"],
+.paginationjs.paginationjs-theme-blue .paginationjs-go-input > input[type='text'],
 .paginationjs.paginationjs-theme-blue .paginationjs-pages li {
   border-color: #289de9;
 }
@@ -135,7 +135,7 @@
   background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%) !important;
 }
 
-.paginationjs .paginationjs-go-button > input[type="button"]:hover {
+.paginationjs .paginationjs-go-button > input[type='button']:hover {
   background-color: #f8f8f8;
 }
 
@@ -143,7 +143,7 @@
   height: 30px;
   line-height: 30px;
   margin: 4px 0 0 6px;
-  color: $dark75;
+  color: global.$dark75;
 }
 
 .paginationjs .paginationjs-go-button,
@@ -171,7 +171,7 @@
   font-size: 12px;
 }
 
-.paginationjs.paginationjs-small .paginationjs-go-input > input[type="text"] {
+.paginationjs.paginationjs-small .paginationjs-go-input > input[type='text'] {
   width: 26px;
   height: 24px;
   font-size: 12px;
@@ -181,7 +181,7 @@
   font-size: 12px;
 }
 
-.paginationjs.paginationjs-small .paginationjs-go-button > input[type="button"] {
+.paginationjs.paginationjs-small .paginationjs-go-button > input[type='button'] {
   min-width: 30px;
   height: 26px;
   line-height: 24px;
@@ -215,7 +215,7 @@
   font-size: 16px;
 }
 
-.paginationjs.paginationjs-big .paginationjs-go-input > input[type="text"] {
+.paginationjs.paginationjs-big .paginationjs-go-input > input[type='text'] {
   width: 36px;
   height: 34px;
   font-size: 16px;
@@ -225,7 +225,7 @@
   font-size: 16px;
 }
 
-.paginationjs.paginationjs-big .paginationjs-go-button > input[type="button"] {
+.paginationjs.paginationjs-big .paginationjs-go-button > input[type='button'] {
   min-width: 50px;
   height: 36px;
   line-height: 34px;
@@ -240,7 +240,7 @@
 }
 
 .paginationjs.paginationjs-theme-blue .paginationjs-pages li > a {
-  color: $dark50;
+  color: global.$dark50;
 }
 
 .paginationjs.paginationjs-theme-blue .paginationjs-pages li.active > a {
@@ -252,18 +252,18 @@
   background: 0 0;
 }
 
-.paginationjs.paginationjs-theme-blue .paginationjs-go-button > input[type="button"] {
+.paginationjs.paginationjs-theme-blue .paginationjs-go-button > input[type='button'] {
   background: #289de9;
   border-color: #289de9;
   color: #fff;
 }
 
-.paginationjs.paginationjs-theme-green .paginationjs-go-input > input[type="text"],
+.paginationjs.paginationjs-theme-green .paginationjs-go-input > input[type='text'],
 .paginationjs.paginationjs-theme-green .paginationjs-pages li {
   border-color: #449d44;
 }
 
-.paginationjs.paginationjs-theme-blue .paginationjs-go-button > input[type="button"]:hover {
+.paginationjs.paginationjs-theme-blue .paginationjs-go-button > input[type='button']:hover {
   background-color: #3ca5ea;
 }
 
@@ -284,18 +284,18 @@
   background: 0 0;
 }
 
-.paginationjs.paginationjs-theme-green .paginationjs-go-button > input[type="button"] {
+.paginationjs.paginationjs-theme-green .paginationjs-go-button > input[type='button'] {
   background: #449d44;
   border-color: #449d44;
   color: #fff;
 }
 
-.paginationjs.paginationjs-theme-yellow .paginationjs-go-input > input[type="text"],
+.paginationjs.paginationjs-theme-yellow .paginationjs-go-input > input[type='text'],
 .paginationjs.paginationjs-theme-yellow .paginationjs-pages li {
   border-color: #ec971f;
 }
 
-.paginationjs.paginationjs-theme-green .paginationjs-go-button > input[type="button"]:hover {
+.paginationjs.paginationjs-theme-green .paginationjs-go-button > input[type='button']:hover {
   background-color: #55a555;
 }
 
@@ -316,18 +316,18 @@
   background: 0 0;
 }
 
-.paginationjs.paginationjs-theme-yellow .paginationjs-go-button > input[type="button"] {
+.paginationjs.paginationjs-theme-yellow .paginationjs-go-button > input[type='button'] {
   background: #ec971f;
   border-color: #ec971f;
   color: #fff;
 }
 
-.paginationjs.paginationjs-theme-red .paginationjs-go-input > input[type="text"],
+.paginationjs.paginationjs-theme-red .paginationjs-go-input > input[type='text'],
 .paginationjs.paginationjs-theme-red .paginationjs-pages li {
   border-color: #c9302c;
 }
 
-.paginationjs.paginationjs-theme-yellow .paginationjs-go-button > input[type="button"]:hover {
+.paginationjs.paginationjs-theme-yellow .paginationjs-go-button > input[type='button']:hover {
   background-color: #eea135;
 }
 
@@ -348,13 +348,13 @@
   background: 0 0;
 }
 
-.paginationjs.paginationjs-theme-red .paginationjs-go-button > input[type="button"] {
+.paginationjs.paginationjs-theme-red .paginationjs-go-button > input[type='button'] {
   background: #c9302c;
   border-color: #c9302c;
   color: #fff;
 }
 
-.paginationjs.paginationjs-theme-red .paginationjs-go-button > input[type="button"]:hover {
+.paginationjs.paginationjs-theme-red .paginationjs-go-button > input[type='button']:hover {
   background-color: #ce4541;
 }
 
@@ -371,7 +371,7 @@
 }
 
 .paginationjs-prev::before {
-  content: "";
+  content: '';
   position: absolute;
   height: 2px;
   width: 14px;
@@ -382,7 +382,7 @@
 }
 
 .paginationjs-prev::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 50%;
   left: 45%;
@@ -393,7 +393,7 @@
 }
 
 .paginationjs-next::before {
-  content: "";
+  content: '';
   position: absolute;
   height: 2px;
   width: 14px;
@@ -404,7 +404,7 @@
 }
 
 .paginationjs-next::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 50%;
   left: 55%;
@@ -414,7 +414,7 @@
   padding: 4px;
 }
 
-.paginationjs .paginationjs-go-input > input[type="text"] {
+.paginationjs .paginationjs-go-input > input[type='text'] {
   line-height: 28px\9;
   vertical-align: middle\9;
 }
@@ -423,7 +423,7 @@
   line-height: 36px\9;
 }
 
-.paginationjs.paginationjs-big .paginationjs-go-input > input[type="text"] {
+.paginationjs.paginationjs-big .paginationjs-go-input > input[type='text'] {
   height: 36px\9;
   line-height: 36px\9;
 }
