--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,36 @@
-@use "normalize";
-@use "global";
-@use "fonts";
+@use 'normalize';
+@use 'global';
+@use 'fonts';
+
+* {
+  box-sizing: border-box;
+  font-family: Montserrat;
+  color: global.$dark100;
+}
+
+body {
+  color: global.$dark75;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+h1 {
+  text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 19px;
+  line-height: 23px;
+}
+
+h3 {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+}
