--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global";
+@use 'src/styles/global.scss';
 
 .button {
   width: 99px;
@@ -28,8 +28,7 @@
   }
 
   &__white {
-    background:
-      linear-gradient(#fff, #fff) padding-box,
+    background: linear-gradient(#fff, #fff) padding-box,
       linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%) border-box;
     border: 2px solid transparent;
   }
@@ -44,7 +43,7 @@
 
     &:hover {
       opacity: 1;
-      color: $dark50;
+      color: global.$dark50;
     }
   }
 
