--- a/src/components/UI-kit/colorFonts/colorFonts.scss
+++ b/src/components/UI-kit/colorFonts/colorFonts.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/global";
+@use 'src/styles/global';
 
 .colorFonts__item {
   display: flex;
@@ -55,19 +55,19 @@
 .colorFonts__text--h1 {
   font-size: 24px;
   line-height: 29px;
-  color: $dark100;
+  color: global.$dark100;
   transform: translate(9px, 0);
 }
 
 .colorFonts__text--h2 {
   font-size: 19px;
-  color: $dark100;
+  color: global.$dark100;
   transform: translate(11px, 1px);
 }
 
 .colorFonts__text--h3 {
   font-size: 12px;
-  color: $dark100;
+  color: global.$dark100;
   transform: translate(21px, -4px);
   text-transform: uppercase;
 }
@@ -75,7 +75,7 @@
 .colorFonts__text--body {
   font-size: 14px;
   font-weight: 400;
-  color: $dark75;
+  color: global.$dark75;
   transform: translate(1px, -13px);
   width: 301px;
 }
