--- a/src/components/airDatePicker/airDatePicker.scss
+++ b/src/components/airDatePicker/airDatePicker.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global";
+@use 'src/styles/global.scss';
 
 .js-airDatePicker {
   width: 318px !important;
@@ -49,50 +49,38 @@
     }
 
     & .air-datepicker-cell {
-      color: $dark50;
+      color: global.$dark50;
       font-size: 12px;
 
       &.-in-range- {
-        // background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-        background:
-          linear-gradient(
-            180deg,
-            rgb(188 156 255 / 25%) 0%,
-            rgb(139 164 249 / 25%) 100%
-          ) !important;
+        background: linear-gradient(
+          180deg,
+          rgb(188 156 255 / 25%) 0%,
+          rgb(139 164 249 / 25%) 100%
+        ) !important;
 
         // opacity: 0.5;
       }
 
       &.-range-from- {
         &::after {
-          content: "";
+          content: '';
           position: absolute;
           width: 100%;
           height: 100%;
           border-radius: 50% 0 0 50%;
-          background:
-            linear-gradient(
-              180deg,
-              rgb(188 156 255 / 25%) 0%,
-              rgb(139 164 249 / 25%) 100%
-            );
+          background: linear-gradient(180deg, rgb(188 156 255 / 25%) 0%, rgb(139 164 249 / 25%) 100%);
         }
       }
 
       &.-range-to- {
         &::after {
-          content: "";
+          content: '';
           position: absolute;
           width: 100%;
           height: 100%;
           border-radius: 0 50% 50% 0;
-          background:
-            linear-gradient(
-              180deg,
-              rgb(188 156 255 / 25%) 0%,
-              rgb(139 164 249 / 25%) 100%
-            );
+          background: linear-gradient(180deg, rgb(188 156 255 / 25%) 0%, rgb(139 164 249 / 25%) 100%);
         }
       }
 
@@ -127,19 +115,19 @@
     }
   }
 
-  & [class*="air-datepicker-cell"][class*="-current-"] {
+  & [class*='air-datepicker-cell'][class*='-current-'] {
     border-radius: 50% !important;
     background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%) !important;
     color: #fff !important;
   }
 
   &__arrowBack {
-    color: $purple;
+    color: global.$purple;
     transform: translate(11px, -3px);
   }
 
   &__arrowForward {
-    color: $purple;
+    color: global.$purple;
     transform: translate(-11px, -3px);
   }
 
@@ -164,14 +152,14 @@
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background-color: $green;
+      background-color: global.$green;
     }
 
     &--selected {
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background-color: $purple;
+      background-color: global.$purple;
     }
   }
 
@@ -234,14 +222,14 @@
 
         &:hover {
           opacity: 1;
-          color: $dark50;
+          color: global.$dark50;
         }
       }
 
       &:hover {
         background: none;
         opacity: 1;
-        color: $dark50;
+        color: global.$dark50;
       }
     }
   }
