--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global";
+@use 'src/styles/global';
 
 .checkbox {
   margin-bottom: 5px;
@@ -12,7 +12,7 @@
     opacity: 0;
 
     &:checked + label::before {
-      background-image: url("../../images/Vector.png");
+      background-image: url('../../images/Vector.png');
       background-repeat: no-repeat;
       background-position: center center;
     }
@@ -22,11 +22,11 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
-    color: $dark50;
+    color: global.$dark50;
     cursor: pointer;
 
     &::before {
-      content: "";
+      content: '';
       display: inline-block;
       width: 18px;
       height: 18px;
@@ -39,7 +39,7 @@
 
     &--rich {
       font-weight: 700;
-      color: $dark75;
+      color: global.$dark75;
     }
   }
 
@@ -50,7 +50,7 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 14px;
-    color: $dark50;
+    color: global.$dark50;
   }
 
   &__rich {
@@ -65,11 +65,11 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    color: $dark50;
+    color: global.$dark50;
 
     &--rich {
       font-weight: 700;
-      color: $dark75;
+      color: global.$dark75;
       margin-bottom: 4px;
       width: 230px;
     }
