--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global";
+@use 'src/styles/global';
 
 .dropdown {
   position: relative;
@@ -7,7 +7,7 @@
     width: 320px;
     height: 43px;
     background: #fff;
-    border: 1px solid $dark25;
+    border: 1px solid global.$dark25;
     padding: 7px 0 8px 14px;
     border-radius: 4px;
     display: flex;
@@ -20,20 +20,20 @@
     }
 
     &::placeholder {
-      color: $dark75;
+      color: global.$dark75;
       font-weight: 400;
       font-size: 14px;
     }
 
     &:hover,
     &:focus {
-      border-color: $dark50;
+      border-color: global.$dark50;
       outline: none;
     }
   }
 
   &__text {
-    color: $dark75;
+    color: global.$dark75;
     font-weight: 400;
     font-size: 14px;
     transform: translateY(-3px);
@@ -44,7 +44,7 @@
     font-size: 12px;
     line-height: 15px;
     text-transform: uppercase;
-    color: $dark100;
+    color: global.$dark100;
   }
 
   &__arrow {
@@ -52,17 +52,13 @@
     top: 10px;
     right: 10px;
     cursor: pointer;
-
-    // &--small {
-    //   right: 64px;
-    // }
   }
 
   &__bottomField {
     position: absolute;
     width: 320px;
     background: #fff;
-    border: 1px solid $dark50;
+    border: 1px solid global.$dark50;
     box-shadow: 0 10px 20px rgb(31 32 65 / 5%);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -99,15 +95,15 @@
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    border: 1px solid $dark50;
+    border: 1px solid global.$dark50;
     text-align: center;
-    color: $dark50;
+    color: global.$dark50;
     cursor: pointer;
     transform: translateX(1px);
     user-select: none;
 
     &--none {
-      border: 1px solid $dark25;
+      border: 1px solid global.$dark25;
       cursor: auto;
     }
   }
@@ -115,13 +111,13 @@
   &__count {
     font-weight: 700;
     font-size: 12px;
-    color: $dark100;
+    color: global.$dark100;
     text-transform: uppercase;
     text-align: center;
     transform: translate(1px, 1px);
 
     &--none {
-      color: $dark25;
+      color: global.$dark25;
     }
   }
 
