--- a/src/components/likeButton/likeButton.scss
+++ b/src/components/likeButton/likeButton.scss
@@ -1,9 +1,9 @@
-@import "../../styles/global";
+@use 'src/styles/global';
 
 .likeButton {
   width: 40px;
   height: 20px;
-  border: 1px solid $dark25;
+  border: 1px solid global.$dark25;
   border-radius: 10px;
   cursor: pointer;
 
@@ -22,7 +22,7 @@
 
   &__icon {
     font-size: 10px;
-    color: $dark25;
+    color: global.$dark25;
     transform: translate(5px, -3px);
   }
 
@@ -30,7 +30,7 @@
     display: inline-block;
     font-weight: 400;
     font-size: 10px;
-    color: $dark25;
+    color: global.$dark25;
     transform: translate(11px, -5px);
   }
 }
