--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -1,4 +1,4 @@
-@import '../../styles/global';
+@use 'src/styles/global';
 
 .login {
   width: 380px;
@@ -26,7 +26,7 @@
       font-weight: 700;
       font-size: 24px;
       line-height: 29px;
-      color: $dark100;
+      color: global.$dark100;
     }
   }
 
