--- a/src/components/radioButton/radioButton.scss
+++ b/src/components/radioButton/radioButton.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global";
+@use 'src/styles/global';
 
 .radioButton {
   margin-bottom: 3px;
@@ -11,11 +11,11 @@
     opacity: 0;
 
     &:checked + label {
-      color: $dark75;
+      color: global.$dark75;
 
       &::before {
-        background: url("../../images/Rectangle.png");
-        border-color: $purple;
+        background: url('../../images/Rectangle.png');
+        border-color: global.$purple;
         background-repeat: no-repeat;
         background-position: center center;
       }
@@ -26,16 +26,16 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    color: $dark50;
+    color: global.$dark50;
     cursor: pointer;
 
     &::before {
-      content: "";
+      content: '';
       display: inline-block;
       width: 18px;
       height: 18px;
       background-color: #fff;
-      border: 1px solid $dark25;
+      border: 1px solid global.$dark25;
       border-radius: 50%;
       margin-right: 10px;
       transform: translateY(6px);
