--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global";
+@use 'src/styles/global';
 
 .toggle {
   display: flex;
@@ -9,7 +9,7 @@
     padding: 3px 7px 0 2px;
     width: 40px;
     height: 20px;
-    border: 1px solid $dark25;
+    border: 1px solid global.$dark25;
     border-radius: 10px;
     margin-right: 10px;
     cursor: pointer;
@@ -22,7 +22,7 @@
   &__Circle {
     width: 12px;
     height: 12px;
-    background: $dark25;
+    background: global.$dark25;
     border-radius: 10px;
     transition: 200ms;
 
@@ -37,7 +37,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    color: $dark75;
+    color: global.$dark75;
     transform: translateY(-3px);
   }
 }
