--- a/src/layouts/UI/UI.pug
+++ b/src/layouts/UI/UI.pug
@@ -9,5 +9,5 @@ html(lang="en")
     title UI PAGE - Metalamp level 2
   body
     .UILayout__wrapper
-      img.UILayout__logo(src=require("../../images/LogoUI.png"))
+      img.UILayout__logo(src=require("../../images/LogoUI.png"), alt="logo")
       block content
