--- a/src/components/iconTextItem/iconTextItem.scss
+++ b/src/components/iconTextItem/iconTextItem.scss
@@ -4,8 +4,8 @@
   width: 280px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid rgb(31 32 65 / 10%);
-  padding-bottom: 20px;
+  // border-bottom: 1px solid rgb(31 32 65 / 10%);
+  // padding-bottom: 20px;
 
   &__icon {
     font-size: 48px;
