--- a/src/components/iconTextList/iconTextList.scss
+++ b/src/components/iconTextList/iconTextList.scss
@@ -3,11 +3,13 @@
 .iconTextList {
   width: 280px;
 
-  &__item {
-    margin-bottom: 20px;
+  &__list {
+    margin: 0;
   }
 
-  &__item:last-child {
-    margin-bottom: 0;
+  &__item:not(:last-child) {
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid rgb(31 32 65 / 10%);
   }
 }
