Added title, description, keywords for all pages

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -7,6 +7,11 @@ include ../../components/booking/booking.pug
 include ../../components/login/login.pug
 include ../../components/UI-kit/numberRoomAndPrice/numberRoomAndPrice.pug
 
+block header
+  title Cards
+  meta(name="description", content="Cards - metalamp 2 step")
+  meta(name="keywords", content="cards")
+
 block content
   .cards 
     .cards__firstColumn
