--- a/src/pages/colorsAndType/colorsAndType.pug
+++ b/src/pages/colorsAndType/colorsAndType.pug
@@ -2,6 +2,11 @@ extends ../../layouts/UI/UI.pug
 include ../../components/UI-kit/ColorBlock/colorBlock.pug
 include ../../components/UI-kit/ColorFonts/colorFonts.pug
 
+block header
+  title Colors and type
+  meta(name="description", content="Colors and type - metalamp 2 step")
+  meta(name="keywords", content="colors and type")
+
 block content
   .pageColors__content
     .pageColors__leftBlock
