--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -17,6 +17,11 @@ include ../../components/comment/comment.pug
 include ../../components/pagination/pagination.pug
 include ../../components/toggle/toggle.pug
 
+block header
+  title Form elements
+  meta(name="description", content="Form elements - metalamp 2 step")
+  meta(name="keywords", content="Form elements")
+
 block content
   section.formElements
     .formElements__firstColumn
