--- a/src/pages/loginPage/loginPage.pug
+++ b/src/pages/loginPage/loginPage.pug
@@ -1,6 +1,11 @@
 extends ../../layouts/pages/pages.pug
 include ../../components/login/login.pug
 
+block header
+  title Login page
+  meta(name="description", content="Login page - metalamp 2 step")
+  meta(name="keywords", content="login page")
+
 block content
   section.loginPage
     .loginPage__loginForm 
