--- a/src/pages/registrationPage/registrationPage.pug
+++ b/src/pages/registrationPage/registrationPage.pug
@@ -1,6 +1,11 @@
 extends ../../layouts/pages/pages.pug
 include ../../components/registration/registration.pug
 
+block header
+  title Registration page
+  meta(name="description", content="Registration page - metalamp 2 step")
+  meta(name="keywords", content="Registration page")
+
 block content
   section.registrationPage
     .registrationPage__registrationForm 
