--- a/src/pages/roomDetails/roomDetails.pug
+++ b/src/pages/roomDetails/roomDetails.pug
@@ -5,6 +5,11 @@ include ../../components/chart/chart.pug
 include ../../components/bulletList/bulletList.pug
 include ../../components/iconTextList/iconTextList.pug
 
+block header
+  title Room details page
+  meta(name="description", content="Room details page - metalamp 2 step")
+  meta(name="keywords", content="Room details page")
+
 block content
   section.roomDetails
     .roomDetails__imgBlock 
