--- a/src/pages/searchRoom/searchRoom.pug
+++ b/src/pages/searchRoom/searchRoom.pug
@@ -8,6 +8,11 @@ include ../../components/expandableCheckboxList/expandableCheckboxList.pug
 include ../../components/pagination/pagination.pug
 include ../../components/room/room.pug
 
+block header
+  title Search room page
+  meta(name="description", content="Search room page - metalamp 2 step")
+  meta(name="keywords", content="Search room page")
+
 block content
   section.searchRoom
     .searchRoom__button.js-searchRoom__button
