--- a/src/pages/startPage/startPage.pug
+++ b/src/pages/startPage/startPage.pug
@@ -4,7 +4,9 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
+    title Start page - metalamp step 2
+    meta(name="description", content="Start page - metalamp 2 step")
+    meta(name="keywords", content="Start page")
   body
     .start-page
       .start-page__links 
